fixed project images on mobile, changed opacity for unclickable buttons

--- a/src/AboutMe.module.scss
+++ b/src/AboutMe.module.scss
@@ -139,6 +139,9 @@
                     border-right: 1px solid rgb(96 165 250 / 1);
                     border-top-left-radius: 0.25rem;
                     border-top-right-radius: 0.25rem;
+                    opacity: 0.5;
+                    cursor: not-allowed;
+                    user-select: none;
                 }
             }
             // .topfunctions:first-child {
@@ -494,9 +497,10 @@
                     box-shadow: #3b82f6 0 0px 2px 1px inset;
                 }
                 button:last-child {
-                    opacity: 0.45;
+                    opacity: 0.5;
                     background-color: white;
-                    cursor: auto;
+                    cursor: not-allowed;
+                    user-select: none;
                 }
             }
         }
