--- a/src/Info.module.scss
+++ b/src/Info.module.scss
@@ -108,7 +108,7 @@
                 height: 100%;
                 button {
                     all: unset;
-                    cursor: pointer;
+                    cursor: auto;
                     display: block;
                     align-items: center;
                     justify-content: center;
