--- a/src/WorkExperience.module.scss
+++ b/src/WorkExperience.module.scss
@@ -109,7 +109,7 @@
                 height: 100%;
                 button {
                     all: unset;
-                    cursor: pointer;
+                    cursor: auto;
                     display: block;
                     align-items: center;
                     justify-content: center;
@@ -151,6 +151,9 @@
                     border-radius: .125rem;
                     border-width: 1px;
                     height: 2rem;
+                    opacity: 0.5;
+                    cursor: not-allowed;
+                    user-select: none;
                     img {
                         width: 1.25rem;
                         height: 1.25rem;
@@ -179,6 +182,9 @@
                     border-radius: .125rem;
                     border-width: 1px;
                     height: 2rem;
+                    opacity: 0.5;
+                    cursor: not-allowed;
+                    user-select: none;
                     img {
                         width: 1.25rem;
                         height: 1.25rem;
@@ -200,6 +206,9 @@
                     border-radius: .125rem;
                     border-width: 1px;
                     height: 2rem;
+                    opacity: 0.5;
+                    cursor: not-allowed;
+                    user-select: none;
                     img {
                         width: 1.5rem;
                         height: 1.25rem;
@@ -228,6 +237,9 @@
                     border-radius: .125rem;
                     border-width: 1px;
                     height: 2rem;
+                    opacity: 0.5;
+                    cursor: not-allowed;
+                    user-select: none;
                     img {
                         width: 1.25rem;
                         height: 1.25rem;
